--- a/leargon-frontend/package.json
+++ b/leargon-frontend/package.json
@@ -13,15 +13,16 @@
     "api:watch": "orval --watch"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.3.0",
-    "@mui/material": "^6.3.1",
-    "@mui/icons-material": "^6.3.1",
+    "@azure/msal-browser": "^5.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.9",
-    "@tanstack/react-query": "^5.62.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
