- Fixed Entra ID Sign-In - Fixed logging - Fixed security issues - Fixed build & release pipeline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,11 @@ services:
     container_name: leargon-backend
     ports:
       - "8081:8080"
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
     environment:
       - MICRONAUT_ENVIRONMENTS=prod
       - MICRONAUT_SERVER_PORT=8080
