- Fixed Entra ID Sign-In - Fixed logging - Fixed security issues - Fixed build & release pipeline

--- a/leargon-backend/src/main/resources/application.properties
+++ b/leargon-backend/src/main/resources/application.properties
@@ -66,6 +66,10 @@ admin.lastName=${ADMIN_LAST_NAME:Administrator}
 azure.tenant-id=${AZURE_TENANT_ID:}
 azure.client-id=${AZURE_CLIENT_ID:}
 
+# HTTP Request Logging
+micronaut.server.netty.access-logger.enabled=true
+micronaut.server.netty.access-logger.logger-name=HTTP_ACCESS_LOG
+
 # Virtual Threads Configuration (Java 21)
 # Enables non-blocking I/O without requiring reactive code changes
 micronaut.server.thread-selection=AUTO
